# cpp-for-AI

./: .gitignore  README.md
chapter_1/: hello.cpp
chapter_2/: 01_setting_up_eigen.cpp  02_matrix_operations.cpp  04_vectorization.cpp  04_vectorization_eigen_optim.cpp  CMakeLists.txt
chapter_2 - Coding Deep Learning with Moder c++/: 03_generating_random_number.cpp
chapter_2/exercises/: 01_flip_matrix.cpp  02_rotate_matrix.cpp  03_find_top_k.cpp
chapter_3 - Testing Deep Learning/: 01_sigmoid_test.cpp  02_glorot_initializer__and__hypothesis_testing.cpp
chapter_4 - Implementing Convolutions/: 01_2d_concolution_with_matrices.cpp  02_opencv_imread.cpp  03_opencv_edge_detection.cpp
